--- a/src/input/root/feeds/bookmarks.json.njk
+++ b/src/input/root/feeds/bookmarks.json.njk
@@ -23,6 +23,15 @@ permalink: "bookmarks.json"
 			{%- if post.data.bookmark.link %}
 			"external_url": "{{ post.data.bookmark.link }}",
 			{% endif -%}
+			{%- if post.data.bookmark.tags -%}
+			"tags": [
+				{%- for tag in post.data.bookmark.tags -%}
+					{%- if tag !== "Bookmarks" -%}
+						"{{ tag }}"{% if not loop.last %}{{ ",\n" }}{% endif %}
+					{%- endif -%}
+				{%- endfor %}
+			],
+			{%- endif -%}
 			{%- if post.data.modified %}
 			"date_modified": "{{ post.data.modified | dateObj | dateToRfc3339 }}",
 			{% endif -%}
