--- a/src/input/root/feeds/bookmarks.json.njk
+++ b/src/input/root/feeds/bookmarks.json.njk
@@ -25,11 +25,8 @@ permalink: "bookmarks.json"
 			{% endif -%}
 			{%- if post.data.bookmark.tags -%}
 			"tags": [
-				{%- for tag in post.data.bookmark.tags -%}
-					{%- if ["Bookmarks", "YouTube"] | includes(tag) -%}
-					{%- else -%}
-						"{{ tag }}"{% if not loop.last %}{{ ",\n" }}{% endif %}
-					{%- endif -%}
+				{% for tag in post.data.bookmark.tags | reject("equalto", "Bookmarks") | reject("equalto", "YouTube") -%}
+					"{{ tag }}"{% if not loop.last %}{{ ",\n" }}{% endif %}
 				{%- endfor %}
 			],
 			{%- endif -%}
