Updating social links

--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -130,6 +130,12 @@ eleventyImport:
 					</a>
 				</li>
 				<li>
+					<a href="https://bsky.app/profile/elly.lol" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+						{%- inlineIcon "fab:bluesky" -%}
+						<span>Bluesky</span>
+					</a>
+				</li>
+				<li>
 					<a href="https://elly.to/linkedin" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
 						{%- inlineIcon "fab:linkedin" -%}
 						<span>LinkedIn</span>
@@ -154,33 +160,31 @@ eleventyImport:
 							<li>
 								<a href="https://www.threads.net/@ellyloel" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
 									{%- inlineIcon "local:Threads" -%}
-									<span>Threads</span>
+									<span>Threads</span> <small>(don't use)</small>
 								</a>
 							</li>
 							<li>
 								<a href="https://instagram.com/elly.louise.loel" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
 									{%- inlineIcon "fab:instagram" -%}
-									<span>Personal Instagram</span>
+									<span>Private Instagram</span> <small>(kinda use)</small>
 								</a>
 							</li>
 							<li>
 								<a href="https://instagram.com/ellyloel" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
 									{%- inlineIcon "fab:instagram" -%}
-									<span>"Professional" Instagram</span>
+									<span>Public Instagram</span> <small>(don't use)</small>
 								</a>
 							</li>
 							<li>
 								<a href="https://tumblr.com/ellyloel" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
 									{%- inlineIcon "fab:tumblr" -%}
-									<span>Tumblr</span>
+									<span>Tumblr</span> <small>(kinda use)</small>
 								</a>
 							</li>
 							<li>
 								<a href="https://twitter.ellyloel.com" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
 									{%- inlineIcon "fab:twitter" -%}
-									<del datetime="2022-11-18" cite="https://twitter.ellyloel.com/1593505830347100160/">
-										<span>Twitter</span>
-									</del>
+									<del datetime="2022-11-18" cite="https://twitter.ellyloel.com/1593505830347100160/"><span>Twitter</span></del> <small>(archive)</small>
 								</a>
 							</li>
 						</ul>
