--- a/src/input/css/blocks/toc.css
+++ b/src/input/css/blocks/toc.css
@@ -1,8 +1,29 @@
+table-of-contents {
+	display: block;
+}
+
 .toc {
 	--flow-space: 0.5em;
 
-	margin-block-end: var(--size-2);
-	margin-block-start: var(--size-3);
+	overflow-y: clip;
+	transition-behavior: allow-discrete;
+	transition-duration: 300ms;
+	transition-property: block-size, padding-block, content-visibility, opacity;
+	transition-timing-function: ease-in-out;
+
+	table-of-contents:has(button[aria-expanded="true"]) & {
+		content-visibility: auto;
+		display: block;
+		opacity: 1;
+		padding-block: var(--size-3) var(--size-2);
+	}
+
+	table-of-contents:has(button[aria-expanded="false"]) & {
+		block-size: 0;
+		content-visibility: hidden;
+		opacity: 0;
+		padding-block: 0;
+	}
 
 	& > ol {
 		list-style-type: disc;
@@ -19,33 +40,43 @@
 }
 
 .toc-container {
+	background-color: var(--accent-bg-subtle);
+	border-radius: var(--radius-2);
 	margin-inline: auto;
+	padding: var(--size-2) var(--size-3);
 
-	& details {
-		& summary {
-			align-items: center;
-			gap: var(--size-3);
+	& h2 {
+		background: none;
+		font-size: var(--font-size-4);
+		margin: calc(var(--size-2) * -1) calc(var(--size-3) * -1);
+		max-inline-size: none;
+	}
 
-			& .inline-icon {
-				color: var(--accent-solid);
-				transition: transform 300ms var(--ease-out-4);
-			}
+	& button {
+		align-items: center;
+		background: none;
+		border: none;
+		border-radius: var(--radius-2);
+		box-shadow: none;
+		display: flex;
+		gap: var(--size-3);
+		inline-size: 100%;
+		justify-content: flex-start;
+		line-height: calc(0.25rem + 1em + 0.25rem);
+		padding: var(--size-2) var(--size-3);
 
-			& h2 {
-				font-size: var(--font-size-4);
-			}
-
-			&:is(:hover, :focus-visible) .inline-icon {
-				color: var(--accent-solid-hover);
-			}
-
-			&::-webkit-details-marker {
-				display: none;
-			}
+		& .inline-icon {
+			color: var(--accent-solid);
+			font-size: var(--font-size-2);
+			transition: transform 300ms var(--ease-out-4);
 		}
 
-		&[open] summary .inline-icon {
-			transform: rotate(90deg);
+		&:is(:hover, :focus-visible) .inline-icon {
+			color: var(--accent-solid-hover);
+		}
+
+		&[aria-expanded="true"] .inline-icon {
+			transform: rotate(0.25turn);
 		}
 	}
 }
