--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -65,6 +65,11 @@
 					</a>
 				</li>
 				<li>
+					<a href="https://bsky.app/profile/elly.lol">
+						{%- labelledIcon "fab:bluesky", { "aria-label": "Bluesky" } -%}
+					</a>
+				</li>
+				<li>
 					<a href="https://elly.to/linkedin">
 						{%- labelledIcon "fab:linkedin", { "aria-label": "LinkedIn" } -%}
 					</a>
