--- a/src/input/content/pages/guestbook.njk
+++ b/src/input/content/pages/guestbook.njk
@@ -12,8 +12,7 @@ eleventyNavigation:
 		<p>This page displays entries sent via Webmention!</p>
 	</strong>
 	<div>
-		<p>If you want to sign the guestbook send through a Webmention, either from your website or you <strong>can reply to this <a href="https://front-end.social/@elly/110143472326627842">toot over on Mastodon</a>
-			</strong>.</p>
+		<p>If you want to sign the guestbook send through a Webmention, either from your website or you can <strong>reply on <a href="https://front-end.social/@elly/110143472326627842">Mastodon</a> or <a href="https://bsky.app/profile/elly.lol/post/3lcteiaaxsc2j">Bluesky</a></strong>.</p>
 	</div>
 </aside>
 
