Updating share section and fixing semantics and removing cruft

--- a/src/_includes/breadcrumb.njk
+++ b/src/_includes/breadcrumb.njk
@@ -2,7 +2,7 @@
 	allowMissing: true,
 	includeSelf: true
 }) -%}
-<nav aria-label="Breadcrumb">
+<nav aria-labelledby="breadcrumb"><p id="breadcrumb" hidden>Breadcrumb</p>
 	<ol>
 		<li>
 			<a href="/" class="[ text-decoration-none move-link-styling-to-child ]">
