--- a/src/input/css/blocks/breadcrumb.css
+++ b/src/input/css/blocks/breadcrumb.css
@@ -1,4 +1,4 @@
-nav[aria-label="Breadcrumb"] ol {
+nav[aria-labelledby="breadcrumb"] ol {
 	display: inline-flex;
 	flex-wrap: wrap;
 	gap: var(--size-2);
