adding fediverse creator meta tag

--- a/src/_includes/meta.njk
+++ b/src/_includes/meta.njk
@@ -38,6 +38,7 @@
 <meta name="og:image" content="{{ ogUrl }}">
 <meta name="og:image:secure_url" content="{{ ogUrl }}">
 <meta property="og:image:alt" content="A background of curved purple lines with the text “{{ text }}” ontop, Elly's logo is in the bottom right corner.">
+<meta name="fediverse:creator" content="@elly@front-end.social">
 
 {#- Icons -#}
 <link rel="icon" href="/assets/img/icons/favicon.ico" sizes="any">
