Updating og images

--- a/src/_includes/meta.njk
+++ b/src/_includes/meta.njk
@@ -8,9 +8,7 @@
 	{%- set text = title -%}
 	{%- set desc = page.excerpt -%}
 	{%- set ogTitle = title -%}
-	{%- set ogUrl -%}
-		https://api.microlink.io/?url=https%3A%2F%2Fwww.ellyloel.com%2Fog{{ page.url }}&screenshot=true&meta=false&embed=screenshot.url
-	{%- endset -%}
+	{%- set ogUrl -%}https://api.microlink.io/?url=https%3A%2F%2Fwww.ellyloel.com%2Fog{{ page.url }}&screenshot=true&meta=false&embed=screenshot.url{%- endset -%}
 {%- endif -%}
 
 {#- General -#}
