--- a/src/_layouts/og.njk
+++ b/src/_layouts/og.njk
@@ -2,8 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Open Graph Image</title>
+		<title>Open Graph Image for {{ content | striptags }}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link
+			rel="icon"
+			href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>📸</text></svg>"
+		>
 		<style>
 			* {
 				margin: 0;
@@ -18,13 +22,12 @@
 				margin: 0;
 			}
 
-			css-doodle {
+			.css-doodle {
 				position: absolute;
 			}
 
-			h1,
-			h2 {
-				border-radius: 1rem;
+			a {
+				text-decoration: none;
 			}
 
 			h1 {
@@ -33,51 +36,86 @@
 				left: 0;
 				translate: 0 -50%;
 				margin: 0 2rem;
-				padding: 2rem;
 				max-width: calc(100vw - 4rem);
+			}
 
+			h1 a,
+			h2 a {
+				border-radius: 1rem;
+			}
+
+			h1 a {
+				position: relative;
+				display: block;
+				padding: 2rem;
 				color: hsl(271deg 83.6% 12%);
 				font-size: 5rem;
-				font-family: 'Fraunces';
+				font-family: "Fraunces";
 				font-optical-sizing: auto;
 				font-variation-settings: "SOFT" 100, "WONK" 1;
 				line-height: 1.1;
 				text-wrap: balance;
+				text-wrap: pretty;
 
 				background-color: hsl(262deg 89.2% 92.7%);
 			}
 
-			@supports (backdrop-filter: 8px) {
-				h1 {
-					color: white;
-					background-color: transparent;
-					backdrop-filter: blur(2rem);
-					--shadow-color: 265deg 52% 61%;
-					box-shadow: 0 0.6px 0.9px hsl(var(--shadow-color) / 0), 0 1.8px 2.7px hsl(var(--shadow-color) / 0.06), 0 3px 4.5px hsl(var(--shadow-color) / 0.11), 0 5px 7.5px hsl(var(--shadow-color) / 0.17), 0 8.4px 12.6px hsl(var(--shadow-color) / 0.22);
-				}
-			}
-
-			h2 {
+			h2 a {
 				position: absolute;
+				display: block;
 				right: 2rem;
 				bottom: 2rem;
 				width: -webkit-fit-content;
 				width: -moz-fit-content;
 				width: fit-content;
 				margin-left: auto;
-				padding: 5px 10px 10px;
+				padding: 14px 12px 8px;
 
 				color: black;
 				font-size: 3rem;
 				line-height: 1;
 
-				background-color: white;
+				background-color: hsl(0 0 100% / 90%);
 				mix-blend-mode: lighten;
 			}
 
 			h2 svg {
+				display: block;
 				height: 0.8em;
-				transform: translateY(0.225em);
+			}
+
+			@supports (backdrop-filter: blur(2rem)) or (-webkit-backdrop-filter: blur(2rem)) {
+				h1 a {
+					color: white;
+					background-color: transparent;
+					-webkit-backdrop-filter: blur(2rem) brightness(90%) saturate(140%);
+					backdrop-filter: blur(2rem) brightness(90%) saturate(140%);
+					text-shadow: hsla(0 0 100% / 60%) 0 0.2rem 2rem;
+					box-shadow: inset 0 0 0.1rem 0.1rem hsl(0 0 100% / 10%);
+				}
+
+				h1 .glass-edge {
+					position: absolute;
+					left: 0;
+					right: 0;
+					bottom: 0;
+					height: 1.4em;
+					background: hsl(0deg 0% 100% / 0.1);
+					-webkit-backdrop-filter: blur(0.5rem) brightness(110%) saturate(120%);
+					backdrop-filter: blur(0.5rem) brightness(110%) saturate(120%);
+					transform: translateY(0.4em);
+					border-bottom-left-radius: 1rem;
+					border-bottom-right-radius: 1rem;
+					z-index: -1;
+					box-shadow: inset 0 -0.1rem 0.1rem 0 hsl(0 0 100% / 10%);
+				}
+
+				h2 a {
+					background: none;
+					mix-blend-mode: normal;
+					backdrop-filter: contrast(50%) saturate(200%) brightness(200%) blur(2rem) hue-rotate(-22deg);
+					color: #5a1c93;
+				}
 			}
 		</style>
 		<link rel="stylesheet" href="/css/fonts.css">
@@ -111,6 +149,8 @@
       );
     </css-doodle>
 		{{ content | safe }}
-		<h2>{% icon "local:elly" %}</h2>
+		<h2>
+			<a href="/">{% labelledIcon "local:elly" %}</a>
+		</h2>
 	</body>
 </html>
