Adding Ko-fi link

--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -148,15 +148,21 @@ eleventyImport:
 					</a>
 				</li>
 				<li>
-					<a href="https://elly.to/codepen" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
-						{%- inlineIcon "fab:codepen" -%}
-						<span>Codepen</span>
+					<a href="https://elly.to/kofi" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+						{%- inlineIcon "local:kofi" -%}
+						<span>Ko-fi</span>
 					</a>
 				</li>
 				<li>
 					<details>
 						<summary>More links</summary>
 						<ul class="[ flow ]">
+							<li>
+								<a href="https://elly.to/codepen" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+									{%- inlineIcon "fab:codepen" -%}
+									<span>Codepen</span>
+								</a>
+							</li>
 							<li>
 								<a href="https://www.threads.net/@ellyloel" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
 									{%- inlineIcon "local:Threads" -%}
