Updating links again

--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -124,13 +124,13 @@ eleventyImport:
 					</a>
 				</li>
 				<li>
-					<a href="https://front-end.social/@elly" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+					<a href="https://elly.to/mastodon" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
 						{%- inlineIcon "fab:mastodon" -%}
 						<span>Mastodon</span>
 					</a>
 				</li>
 				<li>
-					<a href="https://bsky.app/profile/elly.lol" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+					<a href="https://elly.to/bluesky" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
 						{%- inlineIcon "fab:bluesky" -%}
 						<span>Bluesky</span>
 					</a>
@@ -164,9 +164,9 @@ eleventyImport:
 								</a>
 							</li>
 							<li>
-								<a href="https://www.threads.net/@ellyloel" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
-									{%- inlineIcon "local:Threads" -%}
-									<span>Threads</span> <small>(don't use)</small>
+								<a href="https://www.threads.net/fediverse_profile/elly@front-end.social" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+									{%- inlineIcon "fab:threads" -%}
+									<span>Threads</span> <small>(Fediverse profile)</small>
 								</a>
 							</li>
 							<li>
