--- a/src/_includes/meta.njk
+++ b/src/_includes/meta.njk
@@ -50,7 +50,9 @@
 <link type="application/json" rel="alternate" href="{{ metadata.url }}/feed.json" title="{{ metadata.title }}">
 
 {#- Webmentions -#}
-<link href="{{ metadata.author.links.GitHub }}" rel="me">
 <link href="{{ metadata.author.links.Mastodon }}" rel="me">
+<link href="{{ metadata.author.links.Bluesky }}" rel="me">
+<link href="{{ metadata.author.links.GitHub }}" rel="me">
+<link href="{{ metadata.author.links.Threads }}" rel="me">
 <link rel="webmention" href="https://webmention.io/{{ metadata.domain }}/webmention">
 <link rel="pingback" href="https://webmention.io/{{ metadata.domain }}/xmlrpc">
