feeds table styles

--- a/src/input/content/pages/feeds.njk
+++ b/src/input/content/pages/feeds.njk
@@ -19,19 +19,19 @@ Also, you should [learn how to setup your own feed(s)](https://www.mnot.net/rss/
 		<thead>
 			<tr>
 				<th></th>
-				<th>
+				<th style="font-size: var(--font-size-4);">
 					<a href="https://www.rssboard.org/rss-specification" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">
 						{%- inlineIcon "fas:rss" -%}
 						<span>RSS</span>
 					</a>
 				</th>
-				<th>
+				<th style="font-size: var(--font-size-4);">
 					<a href="https://www.rfc-editor.org/rfc/rfc4287.html" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">
 						{%- inlineIcon "local:Atom" -%}
 						<span>Atom</span>
 					</a>
 				</th>
-				<th>
+				<th style="font-size: var(--font-size-4);">
 					<a href="https://www.jsonfeed.org/" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">
 						{%- inlineIcon "local:JSON Feed" -%}
 						<span>JSON</span>
